{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 44,
  "lineage": "ce06070d-74e4-9cd7-c5a1-7a5d4594ef42",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_airflow_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-13T12:36:37.774-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dataengineeringproject-493216/global/firewalls/allow-airflow-ui",
            "log_config": [],
            "name": "allow-airflow-ui",
            "network": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/networks/default",
            "priority": 1000,
            "project": "dataengineeringproject-493216",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/firewalls/allow-airflow-ui",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "airflow-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-13T12:36:37.724-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dataengineeringproject-493216/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/networks/default",
            "priority": 1000,
            "project": "dataengineeringproject-493216",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "airflow-vm",
              "extract-vm",
              "load-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1_extract",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260413",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/zones/europe-west1-b/disks/vm1-ingestion-hub"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/dataengineeringproject-493216/zones/europe-west1-b/instances/vm1-ingestion-hub",
            "instance_id": "6283334357359851384",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "rAzd-ItboSg=",
            "name": "vm1-ingestion-hub",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.241.154.30",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/networks/default",
                "network_ip": "10.132.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "dataengineeringproject-493216"
              }
            ],
            "project": "dataengineeringproject-493216",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/zones/europe-west1-b/instances/vm1-ingestion-hub",
            "service_account": [
              {
                "email": "vm1-extract-sa@dataengineeringproject-493216.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "extract-vm"
            ],
            "tags_fingerprint": "smi5OxQqe0s=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.iam",
            "google_service_account.vm1_extract"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2_load",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260413",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/zones/europe-west1-b/disks/vm2-processing-engine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/dataengineeringproject-493216/zones/europe-west1-b/instances/vm2-processing-engine",
            "instance_id": "7486703156256110456",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata_fingerprint": "rAzd-ItboSg=",
            "name": "vm2-processing-engine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.53.239.222",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/networks/default",
                "network_ip": "10.132.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "dataengineeringproject-493216"
              }
            ],
            "project": "dataengineeringproject-493216",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/zones/europe-west1-b/instances/vm2-processing-engine",
            "service_account": [
              {
                "email": "vm2-load-sa@dataengineeringproject-493216.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "load-vm"
            ],
            "tags_fingerprint": "21rRgN__yKk=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.iam",
            "google_service_account.vm2_load"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm3_airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260413",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/zones/europe-west1-b/disks/vm3-orchestrator"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/dataengineeringproject-493216/zones/europe-west1-b/instances/vm3-orchestrator",
            "instance_id": "5964269259938920312",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "DyssY0q9aGc=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y python3-pip python3-venv\npython3 -m venv /opt/airflow-venv\n/opt/airflow-venv/bin/pip install apache-airflow\necho \"source /opt/airflow-venv/bin/activate\" \u003e\u003e /root/.bashrc\n",
            "name": "vm3-orchestrator",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.168.18",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/global/networks/default",
                "network_ip": "10.132.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "dataengineeringproject-493216"
              }
            ],
            "project": "dataengineeringproject-493216",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataengineeringproject-493216/zones/europe-west1-b/instances/vm3-orchestrator",
            "service_account": [
              {
                "email": "vm3-airflow-sa@dataengineeringproject-493216.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "airflow-vm"
            ],
            "tags_fingerprint": "vNsZ6u92rgQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.iam",
            "google_service_account.vm3_airflow"
          ]
        }
      ]
    }
  ]
}